grammar.js
    source_file: ($) => seq($.object_declaration),

    object_declaration: ($) =>
      seq(
        $.object_header,
        "{",
        $.object_properties_section,
        choice(
          $.table_object_body,
          $.page_object_body,
          $.report_object_body,
          $.codeunit_object_body,
          $.xmlport_object_body,
          $.query_object_body,
          $.menusuite_object_body,
          repeat($.unknown_section),
        ),
        "}",
      ),

    object_header: ($) =>
      seq(
        keyword("OBJECT"),
        field("object_type", $.object_type),
        field("object_id", $.number_literal),
        field("object_name", $.object_name),
      ),

    object_type: ($) => $.identifier,

    object_name: (_) => token(/[^\r\n{][^\r\n{]*/),

    object_properties_section: ($) =>
      seq(keyword("OBJECT-PROPERTIES"), "{", repeat($.section_item), "}"),

    table_object_body: ($) =>
      seq(
        $.properties_section,
        $.fields_section,
        optional($.keys_section),
        optional($.fieldgroups_section),
        optional($.code_section),
        repeat($.unknown_section),
      ),

    page_object_body: ($) =>
      seq(
        $.properties_section,
        $.controls_section,
        optional($.code_section),
        repeat($.unknown_section),
      ),

    report_object_body: ($) =>
      seq(
        $.properties_section,
        $.dataset_section,
        optional($.requestpage_section),
        optional($.labels_section),
        optional($.code_section),
        optional($.rdldata_section),
        optional($.wordlayout_section),
        repeat($.unknown_section),
      ),

    codeunit_object_body: ($) =>
      seq($.properties_section, $.code_section, repeat($.unknown_section)),

    xmlport_object_body: ($) =>
      seq(
        $.properties_section,
        $.elements_section,
        $.events_section,
        optional($.requestpage_section),
        optional($.code_section),
        repeat($.unknown_section),
      ),

    query_object_body: ($) =>
      seq(
        $.properties_section,
        $.elements_section,
        optional($.code_section),
        repeat($.unknown_section),
      ),

    menusuite_object_body: ($) =>
      seq($.properties_section, $.menunodes_section, repeat($.unknown_section)),

    properties_section: ($) =>
      seq(keyword("PROPERTIES"), "{", repeat($.section_item), "}"),

    fields_section: ($) =>
      seq(keyword("FIELDS"), "{", repeat($.section_item), "}"),

    keys_section: ($) =>
      seq(keyword("KEYS"), "{", repeat($.section_item), "}"),

    fieldgroups_section: ($) =>
      seq(keyword("FIELDGROUPS"), "{", repeat($.section_item), "}"),

    controls_section: ($) =>
      seq(keyword("CONTROLS"), "{", repeat($.section_item), "}"),

    dataset_section: ($) =>
      seq(keyword("DATASET"), "{", repeat($.section_item), "}"),

    elements_section: ($) =>
      seq(keyword("ELEMENTS"), "{", repeat($.section_item), "}"),

    events_section: ($) =>
      seq(keyword("EVENTS"), "{", repeat($.section_item), "}"),

    requestpage_section: ($) =>
      seq(
        keyword("REQUESTPAGE"),
        "{",
        optional($.properties_section),
        optional($.controls_section),
        repeat($.section_item),
        "}",
      ),

    labels_section: ($) =>
      seq(keyword("LABELS"), "{", repeat($.section_item), "}"),

    menunodes_section: ($) =>
      seq(keyword("MENUNODES"), "{", repeat($.section_item), "}"),

    rdldata_section: ($) =>
      seq(
        keyword("RDLDATA"),
        "{",
        repeat($.rdldata_payload_line),
        optional($.rdldata_end),
        "}",
      ),

    wordlayout_section: ($) =>
      seq(
        keyword("WORDLAYOUT"),
        "{",
        repeat($.wordlayout_payload_line),
        optional($.wordlayout_end),
        "}",
      ),

    rdldata_payload_line: (_) => token(prec(-1, /[^\r\n]+/)),
    wordlayout_payload_line: (_) => token(prec(-1, /[^\r\n]+/)),

    rdldata_end: (_) => token(prec(4, /END_OF_RDLDATA[ \t]*(?:\r?\n)?/)),
    wordlayout_end: (_) =>
      token(prec(4, /END_OF_WORDLAYOUT[ \t]*(?:\r?\n)?/)),

    code_section: ($) =>
      seq(
        keyword("CODE"),
        "{",
        repeat($.code_item),
        "}",
      ),

    code_item: ($) =>
      choice(
        $.attribute,
        $.var_section,
        $.procedure_declaration,
        $.event_declaration,
        $.begin_end_block,
        $.property_assignment,
        $.action_block_property,
        $.metadata_entry,
        $.unknown_text,
      ),

    section_item: ($) =>
      choice(
        $.property_assignment,
        $.action_block_property,
        $.metadata_entry,
        $.code_value,
        $.unknown_text,
      ),

    metadata_entry: ($) =>
      seq(
        "{",
        repeat(
          choice(
            field("header", $.entry_header_cell),
            $.metadata_property_assignment,
            $.action_block_property,
            $.metadata_entry,
            $.code_value,
            $.metadata_value,
            ";",
          ),
        ),
        "}",
      ),

    entry_header_cell: (_) => token(/[^;={}\r\n][^;={}\r\n]*/),

    attribute: ($) =>
      seq(
        "[",
        field("name", $.identifier),
        optional(seq("(", optional($.metadata_value), ")")),
        "]",
      ),

    var_section: ($) => seq(keyword("VAR"), repeat1($.variable_declaration)),

    variable_declaration: ($) =>
      seq(
        field(
          "name",
          choice($.annotated_identifier, $.identifier, $.quoted_identifier),
        ),
        ":",
        field("type", $.type_spec),
        repeat(
          choice(
            keyword("INDATASET"),
            keyword("RUNONCLIENT"),
            keyword("WITHEVENTS"),
          ),
        ),
        ";",
      ),

    type_spec: ($) =>
      repeat1(
        choice(
          $.annotated_identifier,
          $.quoted_identifier,
          $.identifier,
          $.number_literal,
          $.string_literal,
          $.type_symbol,
          $.parenthesized_metadata,
          $.bracketed_metadata,
        ),
      ),

    procedure_declaration: ($) =>
      seq(
        repeat($.attribute),
        optional(keyword("LOCAL")),
        keyword("PROCEDURE"),
        field("name", choice($.identifier, $.quoted_identifier)),
        optional(field("id_suffix", $.id_suffix)),
        optional(seq("(", optional($.parameter_list), ")")),
        optional(
          choice(
            seq(":", field("return_type", $.type_spec)),
            seq(
              field(
                "return_name",
                choice($.identifier, $.quoted_identifier, $.annotated_identifier),
              ),
              ":",
              field("return_type", $.type_spec),
            ),
          ),
        ),
        ";",
        optional($.var_section),
        field("body", $.begin_end_block),
      ),

    parameter_list: ($) => seq($.parameter, repeat(seq(";", $.parameter))),

    parameter: ($) =>
      seq(
        optional(choice(keyword("VAR"), keyword("CONST"))),
        field("name", choice($.identifier, $.quoted_identifier)),
        optional(field("id_suffix", $.id_suffix)),
        ":",
        field("type", $.type_spec),
        repeat(choice(keyword("INDATASET"), keyword("RUNONCLIENT"))),
      ),

    begin_end_block: ($) =>
      prec.right(
        seq(
          keyword("BEGIN"),
          repeat($.statement),
          keyword("END"),
          optional(choice(";", ".")),
        ),
      ),

    statement: ($) =>
      choice(
        $.begin_end_block,
        $.if_statement,
        $.case_statement,
        $.repeat_until_statement,
        $.while_statement,
        $.for_statement,
        $.foreach_statement,
        $.with_statement,
        $.assignment_statement,
        $.exit_statement,
        $.call_statement,
        $.empty_statement,
        $.raw_statement,
        $.unknown_statement,
      ),

    if_statement: ($) =>
      prec.right(
        seq(
          keyword("IF"),
          field("condition", $.expression),
          keyword("THEN"),
          field("consequence", $.statement_body),
          optional(seq(keyword("ELSE"), field("alternative", $.statement_body))),
        ),
      ),

    statement_body: ($) =>
      choice(
        $.begin_end_block,
        $.if_statement,
        $.case_statement,
        $.repeat_until_statement,
        $.while_statement,
        $.for_statement,
        $.foreach_statement,
        $.with_statement,
        $.assignment_statement,
        $.exit_statement,
        $.call_statement,
        $.empty_statement,
        $.raw_statement,
        $.unknown_statement,
      ),

    foreach_statement: ($) =>
      seq(
        keyword("FOREACH"),
        field("iterator", $.expression),
        keyword("IN"),
        $.expression,
        keyword("DO"),
        $.statement_body,
      ),

    assignment_statement: ($) =>
      prec.right(
        2,
        seq(
          field("left", $.expression),
          ":=",
          field("right", $.expression),
          optional(";"),
        ),
      ),

    exit_statement: ($) =>
      prec.right(
        seq(
          keyword("EXIT"),
          optional(seq("(", optional($.expression), ")")),
          optional(";"),
        ),
      ),

    expression: ($) =>
      choice(
        $.binary_expression,
        $.unary_expression,
        $.call_expression,
        $.member_expression,
        $.scope_expression,
        $.index_expression,
        $.parenthesized_expression,
        $.set_literal,
        $.primary_expression,
      ),

    binary_expression: ($) =>
      choice(
        prec.left(
          PREC.LOGICAL,
          seq($.expression, choice(keyword("AND"), keyword("OR"), keyword("XOR")), $.expression),
        ),
        prec.left(
          PREC.COMPARE,
          seq(
            $.expression,
            choice("=", "<>", "<", "<=", ">", ">=", "..", keyword("IN")),
            $.expression,
          ),
        ),
        prec.left(PREC.ADD, seq($.expression, choice("+", "-"), $.expression)),
        prec.left(
          PREC.MULTIPLY,
          seq($.expression, choice("*", "/", keyword("DIV"), keyword("MOD")), $.expression),
        ),
      ),

    set_literal: ($) =>
      seq("[", optional(seq($.expression, repeat(seq(",", $.expression)))), "]"),

    primary_expression: ($) =>
      choice(
        $.annotated_identifier,
        $.quoted_identifier,
        $.identifier,
        $.string_literal,
        $.datetime_literal,
        $.date_literal,
        $.time_literal,
        $.number_literal,
        $.boolean_literal,
      ),

    metadata_value: ($) =>
      prec.right(seq($._metadata_part, repeat($._metadata_part))),

    _metadata_part: ($) =>
      choice(
        $.metadata_atom,
        $.metadata_braced_segment,
        $.annotated_identifier,
        $.quoted_identifier,
        $.identifier,
        $.string_literal,
        $.datetime_literal,
        $.date_literal,
        $.time_literal,
        $.number_literal,
        $.boolean_literal,
        $.parenthesized_metadata,
        $.bracketed_metadata,
        "::",
        ".",
        ",",
        ":",
        "+",
        "-",
        "*",
        "/",
        "|",
        "#",
        "&",
        "@",
        "?",
        "%",
        "<",
        ">",
        "<=",
        ">=",
        "<>",
        "=",
      ),

    annotated_identifier: ($) => seq(choice($.identifier, $.quoted_identifier), $.id_suffix),

    id_suffix: (_) => token(/@-?[0-9]+/),

    identifier: (_) => token(/[A-Za-z_][A-Za-z0-9_]*/),

    string_literal: (_) => token(/'([^'\r\n]|'')*'/),

    number_literal: (_) => token(/[0-9]+(?:\.[0-9]+)?(?:[Ll])?/),
